# minorseq

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  circle.yml
cmake/: ms-dependencies.cmake
doc/: CLERIC.md  FUSE.md  INSTALL.md  INTRODUCTION.md  JULIET.md  JULIETFLOW.md  MIXDATA.md
include/pacbio/: Version.h.in
include/pacbio/align/: SimdAlignment.h
include/pacbio/cleric/: Cleric.h  ClericSettings.h
include/pacbio/data/: ArrayBase.h  ArrayRead.h  FisherResult.h  MSA.h  MSAByColumn.h  MSAByRow.h  MSAColumn.h  MSARow.h  NucleotideConversion.h  PlainOption.h  QvThresholds.h
include/pacbio/data/internal/: ArrayRead.inl  MSA.inl  PlainOption.inl
include/pacbio/fuse/: Fuse.h  FuseSettings.h
include/pacbio/io/: BamParser.h  BamUtils.h
include/pacbio/juliet/: AminoAcidCaller.h  AminoAcidTable.h  AnalysisMode.h  ErrorEstimates.h  Haplotype.h  HaplotypeType.h  JsonToHtml.h  JulietSettings.h  JulietWorkflow.h  TargetConfig.h  TransitionTable.h  VariantGene.h
include/pacbio/juliet/internal/: AminoAcidCaller.inl  ErrorEstimates.inl  Haplotype.inl
include/pacbio/statistics/: Tests.h
include/pacbio/util/: ExecUtils.h  Termcolor.h  Timer.h
scripts/ci/: build.sh  checkout-submodules.sh
scripts/minorvariant/: build.sh  julietflow  mixdata
src/: AminoAcidCaller.cpp  AminoAcidTable.cpp  ArrayRead.cpp  BamParser.cpp  BamUtils.cpp  CMakeLists.txt  ErrorEstimates.cpp  Fisher.cpp  Haplotype.cpp  JsonToHtml.cpp  MSA.cpp  MSAByColumn.cpp  MSAByRow.cpp  MSAColumn.cpp  NucleotideConversion.cpp  PlainOption.cpp  QvThresholds.cpp  SimdAlignment.cpp  TargetConfig.cpp  Tests.cpp  Timer.cpp  TransitionTable.cpp  VariantGene.cpp  Version.cpp
src/tools/: Cleric.cpp  ClericSettings.cpp  Fuse.cpp  FuseSettings.cpp  JulietSettings.cpp  JulietWorkflow.cpp
src/tools/main/: cleric.cpp  fuse.cpp  juliet.cpp
tests/cram/: fuse.t  juliet_sb.t
tests/cram/siv/: julietflow.t
tests/data/: juliet_hiv_3000_96_1.align.bam.REMOVED.git-id  juliet_hiv_3000_96_1.align.bam.pbi  juliet_hiv_3000_97-1-1-1.align.bam.REMOVED.git-id  juliet_hiv_richqvs_3000_96_1.align.bam.REMOVED.git-id  juliet_hiv_richqvs_3000_96_1.align.bam.pbi
tests/data/julietflow/: sb99_96_1.bam.REMOVED.git-id
tests/python/: test_tool_contracts.py
